--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "ghostlycandlesco": "file:",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -49,5 +51,6 @@
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
-  }
+  },
+  "keywords": []
 }
